--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(regeringskris)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp GameEngine.cpp world/entity.cpp world/env.cpp util.cpp)
+set(SOURCE_FILES main.cpp GameEngine.cpp world/entity.cpp world/env.cpp util.cpp json/json.cc)
 add_executable(regeringskris ${SOURCE_FILES})
 
 #file(COPY intro.txt DESTINATION ${CMAKE_BINARY_DIR} )
