--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,15 @@ project(regeringskris)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp GameEngine.cpp world/entity.cpp world/env.cpp world/loader.cpp util.cpp json/json.cc)
+set(SOURCE_FILES
+    main.cpp
+    GameEngine.cpp
+    world/entity.cpp
+    world/env.cpp
+    world/loader.cpp
+    fight/kabbla.cpp
+    util.cpp
+    json/json.cc)
 add_executable(regeringskris ${SOURCE_FILES})
 
 file(COPY people DESTINATION ${CMAKE_BINARY_DIR} )
